--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,11 @@ h3 {
   font-family: "Muli", -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
 }
 
+h1,
+h2 {
+  font-weight: 100;
+}
+
 pre code {
   padding: 0;
   font-size: inherit;
